Logo issue on mobile fixed
Currently works well on Google Chrome mobile and desktop. Does not work
in mozilla for some reason. Inconvenient but will have to be ignored for
now.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
 	height: 100%;
 	width: 100%;
 	padding:0;
+	overflow-x: hidden;
 }
 header{
 	width: 100%;
@@ -16,6 +17,12 @@ header img{
 	display: block;
 	margin: auto;
 	height: 100%;
+}/*Specifying responsiveness for mobile websites*/
+@media (max-width: 700px){
+	header img{
+		width:100%;
+	}
+
 }
 ul{
 	padding: 0;
